ui/components/ui/menu/menu.scss
.menu {
  &__container {
    @include H6;

    background: var(--white);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.214);
    border-radius: 8px;
    width: 225px;
    color: var(--Black-100);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 16px;
    z-index: 1050;
  }

  &__background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 1050;
  }
}

.menu-item {
  background: none;
  font-size: inherit;
  display: grid;
  grid-template-columns: min-content auto;
  text-align: start;
  align-items: center;
  width: 100%;
  padding: 14px 0;
  cursor: pointer;

  &__icon {
    margin-right: 8px;
    grid-row: 1 / span 2;
    color: var(--Grey-500);
  }

  .disconnect-icon {
    &::before {
      content: "";
      background-image: url(/images/icons/disconnect.svg);
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
      padding: 8px;
      display: flex;
    }
  }
}

